--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+
 :root {
+  --text-color-light: #213547;
+  --text-color-dark: #E5E7EB;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--text-color-dark);
   background-color: #242424;
 
   font-synthesis: none;
@@ -28,6 +32,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: inherit;
+  background-color: inherit;
 }
 
 h1 {
@@ -56,7 +62,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: var(--text-color-light);
     background-color: #ffffff;
   }
   a:hover {
@@ -65,4 +71,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+@media (prefers-color-scheme: dark) {
+  h3 {
+    color: #ffffff !important;
+  }
+}
+h3 {
+  color: #ff00ff !important;
+  background-color: #000 !important;
+  border: 2px solid red !important;
 }
